# Python_ChatBot

./: .env.example  .gitignore  PUBLIC_CLEANUP_AUDIT.md  README.md  bot.py  pyproject.toml
scripts/: check_syntax.py
src/chatbot/: __init__.py  admin_web.py  bilibili_url_extract.py  commands.py  cooldown.py  llm.py  memory.py  message_render.py  permissions.py  persona_engine.py  points.py  random_personality.py  runtime.py  safe_math.py  security.py  settings.py  sign_logic.py  storage.py  text.py
src/chatbot/bot_brain/: __init__.py  context.py  critic.py  fallback.py  generator.py  local_store.py  memory_decision_frame.py  models.py  natural_output.py  observation.py  observer.py  planner.py  protected_identity.py  retrieval.py  social_memory.py  thought_queue.py  types.py
src/chatbot/bot_brain/admin/: __init__.py  memory_admin.py  memory_admin_facade.py
src/chatbot/bot_brain/alias_graph/: __init__.py  models.py  repository.py  sqlite_repository.py
src/chatbot/bot_brain/generation/: __init__.py  orchestrator.py
src/chatbot/bot_brain/governance/: __init__.py  service.py
src/chatbot/shion_brain/: __init__.py  context.py  critic.py  generator.py  llm_provider.py  memory_store.py  models.py  mood_engine.py  observer.py  persona_engine.py  planner.py  reflection.py  retrieval.py  self_state.py  thinking.py  thought_queue.py
src/plugins/admin/: __init__.py
src/plugins/ambient_reply/: README.md  __init__.py
src/plugins/bilibili/: __init__.py
src/plugins/core/: __init__.py
src/plugins/dream_diary/: README.md  __init__.py
src/plugins/fun/: __init__.py
src/plugins/meme_memory/: README.md  __init__.py
src/plugins/memory_crud_direct/: __init__.py
src/plugins/memory_fortune/: README.md  __init__.py
src/plugins/memory_governance_direct/: __init__.py
src/plugins/memory_nl_crud_direct/: __init__.py
src/plugins/persona_live/: README.md  __init__.py
src/plugins/points/: README.md  __init__.py
src/plugins/profile_memory_direct/: __init__.py
src/plugins/shion_lifecycle/: __init__.py
src/plugins/sign/: README.md  __init__.py
src/plugins/social_memory/: __init__.py
src/plugins/utility/: __init__.py
tests/: conftest.py  test_bilibili_card_url_detection.py  test_bilibili_file_send_policy.py  test_bot_brain_context.py  test_bot_brain_fallback.py  test_bot_brain_pipeline.py  test_bot_brain_retrieval.py  test_cooldown.py  test_public_imports.py  test_safe_eval.py  test_shion_adaptive_reflection.py  test_shion_cognitive_memory.py  test_shion_motivation_planner_v2.py  test_shion_self_state.py  test_shion_thought_queue.py  test_sign_points.py  test_storage.py
(+51 files in other folders)
