[project]
name = "python-bot"
version = "0.1.0"
description = "A clean NoneBot2 + OneBot V11 + NapCat QQ chatbot template."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nonebot2[fastapi,httpx,websockets]>=2.4.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "pydantic-settings>=2.0.0",
    "yt-dlp>=2025.0.0",
]

[project.optional-dependencies]
onebot = [
    "nonebot-adapter-onebot>=2.4.0",
]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
plugins = ["nonebot_plugin_apscheduler"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
