[project]
name = "python-bot-public-base"
version = "0.1.0"
description = "A public-safe NoneBot2 chatbot scaffold with generic memory support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nonebot2[fastapi,httpx,websockets]>=2.4.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "pydantic-settings>=2.0.0",
    "yt-dlp>=2025.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
onebot = [
    "nonebot-adapter-onebot>=2.4.0",
]
telegram = [
    # The Telegram adapter currently publishes beta releases only, so the
    # pre-release marker must be explicit for pip to resolve it.
    "nonebot-adapter-telegram>=0.1.0b20,<0.2.0",
]
discord = [
    "nonebot-adapter-discord>=0.1.0",
]
feishu = [
    "nonebot-adapter-feishu>=2.0.0",
]
qq = [
    "nonebot-adapter-qq>=1.4.0",
]
github = [
    "nonebot-adapter-github>=0.6.0",
]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
plugins = ["nonebot_plugin_apscheduler"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
