[project]
name = "python-bot-public"
version = "0.2.0"
description = "Public-safe NoneBot2 + OneBot V11 bot base."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "nonebot2[fastapi,httpx,websockets]>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "yt-dlp>=2025.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
plugins = ["nonebot_plugin_apscheduler"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
